--- a/FortniteLauncher/FortniteLauncher.csproj
+++ b/FortniteLauncher/FortniteLauncher.csproj
@@ -31,6 +31,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Remove="FNLauncher_Icon.png" />
     <None Remove="lawinserverImage.png" />
   </ItemGroup>
 
@@ -47,18 +48,15 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Resource Include="FNLauncher_Icon.png">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </Resource>
     <Resource Include="lawinserverImage.png" />
   </ItemGroup>
 
   <ItemGroup>
     <Folder Include="Launcher\LauncherData\Proxy\" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <None Update="FNLauncher_Icon.png">
-      <Pack>True</Pack>
-      <PackagePath>\</PackagePath>
-    </None>
   </ItemGroup>
 
 </Project>
