--- a/FortniteLauncher.Common/FortniteLauncher.Common.csproj
+++ b/FortniteLauncher.Common/FortniteLauncher.Common.csproj
@@ -57,6 +57,7 @@
     <Compile Include="Cores\InjectSSLbypass.cs" />
     <Compile Include="Cores\Win32.cs" />
     <Compile Include="dialog.cs" />
+    <Compile Include="Functions\ConfigsFunctions.cs" />
     <Compile Include="Functions\ConsoleFunctions.cs" />
     <Compile Include="Functions\FortniteFunctions.cs" />
     <Compile Include="Functions\RaiderFunctions.cs" />
